--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -45,6 +45,7 @@
 @import 'blocks/info-tooltip';
 @import 'blocks/main-empty';
 @import 'blocks/info-banner';
+@import 'blocks/info-banner-button';
 
 // main page
 @import 'blocks/news-notice';
