--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -156,4 +156,16 @@
       display: initial;
     }
   }
+
+  &--warning {
+    border: 1px solid var(--color-interactive-accent, $warning-orange);
+
+    &__title {
+      color: $warning-orange;
+    }
+
+    &__icon {
+      color: $warning-orange;
+    }
+  }
 }
