--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -25,6 +25,7 @@ $pale-red: #fef9f9;
 $red: #e55050;
 $color-bg: #f9f9fa;
 $orange: #fca844;
+$warning-orange: #ffc989;
 $dark: #21252b;
 $comfort: #4d4b43;
 $light-yellow: #f7f3d8;
