--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,6 +46,8 @@
 @import 'blocks/main-empty';
 @import 'blocks/info-banner';
 @import 'blocks/info-banner-button';
+@import 'blocks/proposal';
+@import 'blocks/comments-tab';
 
 // main page
 @import 'blocks/news-notice';
