--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1,4 +1,4 @@
-.proposal h2:not([class]) {
+.proposal h2 {
   margin: 0 0 32px;
   font-weight: 400;
   font-size: 1.875rem;
@@ -58,5 +58,131 @@
 
   &--padding {
     padding-bottom: 40px;
+  }
+}
+
+.proposal__form {
+  margin-top: 80px;
+
+  & h2 {
+    margin-bottom: 12px;
+  }
+
+  & p {
+    margin: 0 0 34px;
+  }
+}
+
+.proposal__uploads {
+  margin-bottom: 80px;
+
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  justify-content: flex-end;
+
+  & div {
+    flex-shrink: 0;
+    position: relative;
+    width: 205px;
+    height: 205px;
+    overflow: hidden;
+    margin-right: 24px;
+
+    border-radius: 5px;
+    filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
+
+    & button[type="button"] {
+      position: absolute;
+      top: 4px;
+      right: 4px;
+      width: 28px;
+      height: 28px;
+
+      background-color: var(--color-bg-main, $white);
+      border: none;
+      border-radius: 5px;
+      outline: none;
+
+      cursor: pointer;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 15px;
+        height: 1px;
+
+        background-color: var(--color-interactive-accent, $red);
+
+        transform: translate(-50%, -50%) rotate(-45deg);
+        transition: background-color $style-change-duration;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 15px;
+        height: 1px;
+
+        background-color: var(--color-interactive-accent, $red);
+
+        transform: translate(-50%, -50%) rotate(45deg);
+        transition: background-color $style-change-duration;
+      }
+
+      &:hover:not(.focus-visible) {
+        &::before,
+        &::after {
+          background-color: var(--color-interactive-accent, rgba($red, 0.5));
+        }
+      }
+    }
+  }
+
+  & img {
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  & label {
+    display: flex;
+    align-items: center;
+
+    width: 205px;
+    height: 205px;
+
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 130%;
+
+    text-align: center;
+    color: var(--color-text, $grey-default);
+
+    border: 2px dashed var(--color-stroke, $light-grey);
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    & span {
+      padding-top: 34px;
+      position: relative;
+
+      &::before {
+        content: '+';
+        position: absolute;
+        top: 1px;
+        left: 50%;
+        transform: translateX(-50%);
+
+        font-size: 2.5rem;
+        color: var(--color-text, $grey-default);
+        font-weight: 200;
+      }
+    }
   }
 }
