--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -40,6 +40,10 @@
   .page-content {
     padding-top: 24px;
     padding-bottom: 64px;
+
+    &--proposal {
+      padding-bottom: 70px;
+    }
   }
 
   .page-content__title {
