--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -171,5 +171,31 @@
     & .info-banner__icon {
       color: $warning-orange;
     }
+
+    @media (max-width: $tablet-width) {
+      padding: 24px 32px 22px 64px;
+      margin-top: 14px;
+      margin-bottom: 40px;
+
+      & .info-banner__title {
+        margin-top: 0;
+        margin-bottom: 7px;
+        padding: 0;
+      }
+
+      & .info-banner__text {
+        margin: 0;
+        font-size: rem(15px);
+      }
+
+      & .info-banner__icon {
+        top: 23px;
+        left: 23px;
+      }
+    }
+
+    // @media (max-width: $mobile-max-width) {
+    //   top: 13px;
+    // }
   }
 }
