--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -3,18 +3,39 @@
   font-weight: 400;
   font-size: 1.875rem;
   line-height: 2.25rem;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 25px;
+    font-size: rem(24px);
+    line-height: rem(28px);
+  }
 }
 
 .proposal__title {
   margin-bottom: 26px;
+
+  @media (max-width: $tablet-width) {
+    font-size: rem(30px);
+    line-height: rem(36px);
+
+    margin-bottom: 34px;
+  }
 }
 
 .proposal__link {
   margin-bottom: 59px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 46px;
+  }
 }
 
 .proposal__comments {
   margin-bottom: 12px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 16px;
+  }
 }
 
 .proposal__last-comment {
@@ -41,12 +62,20 @@
 
     color: var(--color-text, $dark-text);
   }
+
+  @media (max-width: $tablet-width) {
+    height: 223px;
+    overflow: hidden;
+    margin-bottom: 56px;
+  }
 }
 
 .proposal__text-block {
   margin-bottom: 32px;
   padding: 12px 16px;
   background-color: var(--color-bg-secondary, $color-bg);
+  border: 1px solid var(--color-stroke, $light-grey);
+  border-radius: 5px;
 
   & p {
     margin: 0;
@@ -59,6 +88,11 @@
   &--padding {
     padding-bottom: 40px;
   }
+
+  @media (max-width: $tablet-width) {
+    padding-bottom: 14px;
+    margin-bottom: 16px;
+  }
 }
 
 .proposal__form {
@@ -66,10 +100,24 @@
 
   & h2 {
     margin-bottom: 12px;
+
+    @media (max-width: $tablet-width) {
+      margin-bottom: 18px;
+    }
   }
 
   & p {
     margin: 0 0 34px;
+
+    @media (max-width: $tablet-width) {
+      line-height: 180%;
+      padding-right: 30px;
+      margin-bottom: 14px;
+    }
+  }
+
+  @media (max-width: $tablet-width) {
+    margin-top: 64px;
   }
 }
 
@@ -79,6 +127,11 @@
   display: flex;
   flex-flow: row-reverse nowrap;
   justify-content: flex-end;
+
+  @media (max-width: $tablet-width) {
+    flex-flow: column-reverse wrap;
+    margin-bottom: 72px;
+  }
 
   & div {
     flex-shrink: 0;
@@ -90,6 +143,13 @@
 
     border-radius: 5px;
     filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
+
+    @media (max-width: $tablet-width) {
+      width: 100%;
+      height: calc(100vw / 2);
+      margin-right: 0;
+      margin-bottom: 24px;
+    }
 
     & button[type="button"] {
       position: absolute;
@@ -104,6 +164,11 @@
       outline: none;
 
       cursor: pointer;
+
+      @media (max-width: $tablet-width) {
+        top: 8px;
+        right: 8px;
+      }
 
       &::before {
         content: '';
@@ -143,8 +208,8 @@
   }
 
   & img {
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
   }
@@ -168,9 +233,20 @@
 
     cursor: pointer;
 
+    @media (max-width: $tablet-width) {
+      width: 100%;
+      height: calc(100vw / 2);
+
+      justify-content: center;
+    }
+
     & span {
       padding-top: 34px;
       position: relative;
+
+      @media (max-width: $tablet-width) {
+        max-width: 50%;
+      }
 
       &::before {
         content: '+';
@@ -184,5 +260,12 @@
         font-weight: 200;
       }
     }
+  }
+}
+
+.proposal .landscaping-form__section--map .landscaping-form__tip {
+  @media (max-width: $tablet-width) {
+    padding-right: 0;
+    margin-bottom: 22px;
   }
 }
