--- a/source/sass/blocks/comments-tab.scss
+++ b/source/sass/blocks/comments-tab.scss
@@ -4,6 +4,10 @@
 
   transition: height $style-change-duration-slow;
 
+  @media (max-width: $tablet-width) {
+    height: 64px;
+  }
+
   & button {
     display: flex;
     min-width: 100%;
@@ -29,6 +33,12 @@
       padding: 11px 17px 11px 17px;
     }
 
+    & span {
+      @media (max-width: $tablet-width) {
+       max-width: 275px;
+      }
+    }
+
     & svg {
       margin-top: 4px;
       margin-left: auto;
@@ -42,10 +52,6 @@
         height: 16px;
       }
     }
-  }
-
-  @media (max-width: $tablet-width) {
-    height: 64px;
   }
 }
 
