--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -2,6 +2,10 @@
   min-width: $mobile-width;
   padding-top: 40px;
   padding-bottom: 120px;
+
+  &--proposal {
+    padding-bottom: 80px;
+  }
 }
 
 .page-content__title {
