--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -86,7 +86,7 @@
   }
 
   &--padding {
-    padding-bottom: 40px;
+    padding-bottom: 36px;
   }
 
   @media (max-width: $tablet-width) {
@@ -125,11 +125,11 @@
   margin-bottom: 80px;
 
   display: flex;
-  flex-flow: row-reverse nowrap;
-  justify-content: flex-end;
+  flex-flow: row wrap;
+  justify-content: flex-start;
 
   @media (max-width: $tablet-width) {
-    flex-flow: column-reverse wrap;
+    flex-flow: column wrap;
     margin-bottom: 72px;
   }
 
@@ -143,6 +143,10 @@
 
     border-radius: 5px;
     filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
+
+    &:last-of-type {
+      margin-right: 0;
+    }
 
     @media (max-width: $tablet-width) {
       width: 100%;
@@ -215,6 +219,8 @@
   }
 
   & label {
+    margin-left: 23px;
+
     display: flex;
     align-items: center;
 
@@ -236,6 +242,7 @@
     @media (max-width: $tablet-width) {
       width: 100%;
       height: calc(100vw / 2);
+      margin-left: 0;
 
       justify-content: center;
     }
