--- a/source/sass/blocks/landscaping-form.scss
+++ b/source/sass/blocks/landscaping-form.scss
@@ -111,17 +111,17 @@
 }
 
 .landscaping-form__img {
-  margin-right: 22px;
+  margin-right: 19px;
   position: relative;
-  width: 215px;
-  height: 215px;
+  width: 205px;
+  height: 205px;
   filter: drop-shadow(0px 2px 4px rgba(0, 30, 75, 0.15));
   border-radius: 5px;
 
   img {
     display: block;
-    width: 215px;
-    height: 215px;
+    width: 205px;
+    height: 205px;
   }
 }
 
@@ -222,6 +222,15 @@
       height: 460px;
     }
   }
+
+  .landscaping-form__img-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .landscaping-form__img {
+    margin-bottom: 24px;
+  }
 }
 
 @include mobile {
@@ -289,6 +298,7 @@
   
   .landscaping-form__img {
     margin-right: 0;
+    margin-bottom: 24px;
     width: 288px;
     height: 160px;
 
