--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -48,6 +48,7 @@
 @import "blocks/info-banner-button";
 @import 'blocks/proposal';
 @import 'blocks/comments-tab';
+@import 'blocks/address-pin';
 
 // main page
 @import "blocks/news-notice";
