--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -52,6 +52,10 @@
     &--proposal {
       padding-bottom: 70px;
     }
+
+    &--approved {
+      padding-bottom: 72px;
+    }
   }
 
   .page-content__title {
