--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -288,33 +288,73 @@
 }
 
 .proposal--approved {
-  & .proposal__title {
+  .proposal__title {
     margin-bottom: 41px;
+
+    @media (max-width: $tablet-width) {
+      font-size: rem(24px);
+      line-height: rem(28px);
+      margin-bottom: 26px;
+    }
   }
 
-  & .project-page__text-container p {
+  .proposal__text {
+    margin-bottom: 32px;
+    line-height: 180%;
+  }
+
+  .project-vote__container {
+    @media (max-width: $tablet-width) {
+      padding: 24px;
+
+      margin-bottom: 48px;
+    }
+  }
+
+  .project-page__text-container p {
     padding-top: 16px;
     padding-right: 2px;
     font-size: rem(15px);
     line-height: 180%;
   }
 
-  & .proposal__subtitle {
+  .proposal__subtitle {
     margin-bottom: 22px;
+
+    @media (max-width: $tablet-width) {
+      font-size: rem(30px);
+      line-height: rem(36px);
+    }
   }
 
-  & .proposal__subtitle--map {
+  .proposal__subtitle--map {
     margin-bottom: 9px;
+
+    @media (max-width: $tablet-width) {
+      margin-bottom: 16px;
+    }
   }
 
-  & iframe {
+  .project-page__gallery {
+    @media (max-width: $tablet-width) {
+      margin-bottom: 58px;
+    }
+  }
+
+  iframe {
     margin-bottom: 41px;
+
+    @media (max-width: $tablet-width) {
+      width: 100%;
+      height: 288px;
+      margin-bottom: 34px;
+    }
   }
 
-  & .button {
+  .button {
     padding: 17px 40px 15px;
 
-    & span {
+    span {
       padding: 0;
     }
   }
