--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -288,10 +288,32 @@
 }
 
 .proposal--approved {
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 360px;
+    grid-column-gap: 20px;
+    grid-template-areas:
+    "a   a"
+    "b   c"
+    "d   c"
+    "e   c"
+    "f   c"
+    "g   c"
+    "h   c"
+    "i   c";
+  }
+
+
+  > * {
+    align-self: start;
+  }
+
   .proposal__title {
+    grid-area: a;
     margin-bottom: 41px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width) {
       font-size: rem(24px);
       line-height: rem(28px);
       margin-bottom: 26px;
@@ -299,12 +321,20 @@
   }
 
   .proposal__text {
-    margin-bottom: 32px;
+    grid-area: b;
+    margin-bottom: 41px;
     line-height: 180%;
   }
 
+  .proposal__vote {
+    position: sticky;
+    top: 90px;
+
+    grid-area: c;
+  }
+
   .project-vote__container {
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width) {
       padding: 24px;
 
       margin-bottom: 48px;
@@ -319,32 +349,40 @@
   }
 
   .proposal__subtitle {
+    grid-area: d;
     margin-bottom: 22px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width) {
       font-size: rem(30px);
       line-height: rem(36px);
     }
   }
 
   .proposal__subtitle--map {
+    grid-area: f;
     margin-bottom: 9px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width) {
       margin-bottom: 16px;
     }
   }
 
   .project-page__gallery {
-    @media (max-width: $tablet-width) {
+    grid-area: e;
+    @media (max-width: $desktop-width) {
       margin-bottom: 58px;
     }
   }
 
-  iframe {
-    margin-bottom: 41px;
+  .proposal__address {
+    grid-area: g;
+  }
 
-    @media (max-width: $tablet-width) {
+  iframe {
+    grid-area: h;
+    margin-bottom: 46px;
+
+    @media (max-width: $desktop-width) {
       width: 100%;
       height: 288px;
       margin-bottom: 34px;
@@ -352,6 +390,8 @@
   }
 
   .button {
+    justify-self: start;
+    grid-area: i;
     padding: 17px 40px 15px;
 
     span {
