пп мобильной версии формы 8

--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -56,6 +56,11 @@
     &--approved {
       padding-bottom: 72px;
     }
+
+    &--implemented {
+      padding-top: 46px;
+      padding-bottom: 72px;
+    }
   }
 
   .page-content__title {
