--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -296,6 +296,7 @@
   padding: 15px 24px;
   border: 1px solid var(--color-stroke, $light-grey);
   border-radius: $border-radius;
+  margin-bottom: 39px;
 
   @media (max-width: $tablet-width) {
     margin-bottom: 26px;
@@ -429,7 +430,33 @@
 }
 
 .proposal--implemented {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: minmax(740px, 1fr) 360px;
+    grid-column-gap: 20px;
+    grid-template-areas:
+    "a   a"
+    "b   c"
+    "d   c"
+    "e   c"
+    "f   c"
+    "g   c"
+    "h   c"
+    "i   c"
+    "j   c"
+    "k   c"
+    "l   c"
+    "m   c";
+  }
+
+  > * {
+    align-self: start;
+  }
+
   .proposal__title {
+    grid-area: a;
+    margin-bottom: 41px;
+
     @media (max-width: $desktop-width) {
       font-size: rem(24px);
       line-height: rem(28px);
@@ -437,7 +464,13 @@
     }
   }
 
+  .proposal__status {
+    grid-area: b;
+  }
+
   .proposal__vote {
+    grid-area: c;
+
     @media (max-width: $desktop-width) {
       margin-bottom: 55px;
     }
@@ -460,33 +493,64 @@
   }
 
   .proposal__subtitle {
+    grid-area: d;
+    margin-bottom: 24px;
+
     @media (max-width: $desktop-width) {
+      margin-bottom: 25px;
       font-size: rem(30px);
       line-height: rem(36px);
+    }
+
+    &--gallery {
+      grid-area: h;
+    }
+
+    &--map {
+      grid-area: j;
+
+      @media (max-width: $desktop-width) {
+        margin-bottom: 16px;
+      }
     }
   }
 
   .proposal__files {
+    grid-area: e;
+    margin-bottom: 48px;
+
     @media (max-width: $desktop-width) {
       margin-bottom: 40px;
     }
   }
 
   .proposal__gallery {
+    max-width: 740px;
+
     @media (max-width: $desktop-width) {
       padding-bottom: 55px;
     }
 
     &--bordered {
+      grid-area: f;
+      padding-bottom: 48px;
+      border-bottom: 1px solid var(--color-stroke, $light-grey);
+
       @media (max-width: $desktop-width) {
         padding-bottom: 47px;
-
-        border-bottom: 1px solid var(--color-stroke, $light-grey);
       }
+    }
+
+    &--grid {
+      grid-area: i;
     }
   }
 
   .proposal__text {
+    grid-area: g;
+    padding-top: 40px;
+    font-size: rem(15px);
+
     @media (max-width: $desktop-width) {
      margin-top: 0;
      margin-bottom: 55px;
@@ -495,15 +559,19 @@
     }
   }
 
-  .proposal__subtitle--map {
-    @media (max-width: $desktop-width) {
-      margin-bottom: 16px;
-    }
+  .proposal__address {
+    grid-area: k;
   }
 
   iframe {
+    grid-area: l;
+
     @media (max-width: $desktop-width) {
       margin-bottom: 34px;
     }
+  }
+
+  .button {
+    grid-area: m;
   }
 }
