--- a/source/sass/blocks/landscaping-form.scss
+++ b/source/sass/blocks/landscaping-form.scss
@@ -18,6 +18,11 @@
     border-radius: 5px;
     width: 100%;
   }
+
+  input, 
+  textarea {
+    -webkit-appearance: none;
+  }
 }
 
 .landscaping-form__textarea-container {
