--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -88,6 +88,7 @@
 @import "blocks/improvement-item.scss";
 
 // improvement fork1,4
+@import "blocks/improvement-status.scss";
 @import "blocks/improvement-fork-1.scss";
 @import "blocks/improvement-fork-4.scss";
 @import "blocks/proposal-winners.scss";
