--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -2,6 +2,8 @@
 
   & iframe {
     border: none;
+    width: 100%;
+    height: 600px;
 
     @media (max-width: $desktop-width) {
       width: 100%;
