--- a/source/sass/blocks/comments-tab.scss
+++ b/source/sass/blocks/comments-tab.scss
@@ -3,6 +3,8 @@
   overflow: hidden;
 
   transition: height $style-change-duration-slow;
+  border: 1px solid var(--color-stroke, $light-grey);
+  border-radius: 5px;
 
   @media (max-width: $tablet-width) {
     height: 64px;
@@ -18,8 +20,7 @@
     line-height: 1.375rem;
     color: var(--color-text, $dark-text);
 
-    border: 1px solid var(--color-stroke, $light-grey);
-    border-radius: 5px;
+    border: none;
     outline: none;
 
     cursor: pointer;
@@ -64,8 +65,7 @@
 .comments-tab__content {
   padding: 24px 16px 23px;
 
-  border: 1px solid var(--color-stroke, $light-grey);
-  border-top: none;
+  border-top: 1px solid var(--color-stroke, $light-grey);
 }
 
 .comments-tab__heading {
