--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -33,6 +33,10 @@
 @include tablet {
   .page-content {
     padding-bottom: 88px;
+
+    &--proposal {
+      padding-bottom: 103px;
+    }
   }
 
   .page-content .list-btn {
