--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -17,7 +17,7 @@
   font-size: 1.875rem;
   line-height: 2.25rem;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $tablet-width - 1) {
     margin-bottom: 25px;
     font-size: rem(24px);
     line-height: rem(28px);
@@ -28,7 +28,11 @@
   margin-bottom: 26px;
   max-width: 100%;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 33px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
     font-size: rem(30px);
     line-height: rem(36px);
 
@@ -39,7 +43,11 @@
 .proposal__link {
   margin-bottom: 59px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 57px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
     margin-bottom: 46px;
   }
 }
@@ -47,7 +55,11 @@
 .proposal__comments {
   margin-bottom: 12px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 10px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
     margin-bottom: 16px;
   }
 }
@@ -58,6 +70,10 @@
 
   border: 1px solid var(--color-interactive-default, $blue-default);
   border-radius: 5px;
+
+  @media (max-width: $tablet-width - 1) {
+    margin-bottom: 56px;
+  }
 
   & p:first-child {
     margin: 0 0 16px;
@@ -75,12 +91,6 @@
     line-height: 180%;
 
     color: var(--color-text, $dark-text);
-  }
-
-  @media (max-width: $tablet-width) {
-    height: 223px;
-    overflow: hidden;
-    margin-bottom: 56px;
   }
 }
 
@@ -103,7 +113,7 @@
     padding-bottom: 36px;
   }
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $tablet-width - 1) {
     padding-bottom: 14px;
     margin-bottom: 16px;
   }
@@ -115,7 +125,7 @@
   & h2 {
     margin-bottom: 12px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width - 1) {
       margin-bottom: 18px;
     }
   }
@@ -123,14 +133,18 @@
   & p {
     margin: 0 0 34px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $desktop-width - 1) {
       line-height: 180%;
       padding-right: 30px;
+      margin-bottom: 37px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 14px;
     }
   }
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $tablet-width - 1) {
     margin-top: 64px;
   }
 }
@@ -142,7 +156,7 @@
   flex-flow: row wrap;
   justify-content: flex-start;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $tablet-width - 1) {
     flex-flow: column wrap;
     margin-bottom: 72px;
   }
@@ -162,7 +176,7 @@
       margin-right: 0;
     }
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: $tablet-width - 1) {
       width: 100%;
       height: calc(100vw / 2);
       margin-right: 0;
@@ -183,7 +197,7 @@
 
       cursor: pointer;
 
-      @media (max-width: $tablet-width) {
+      @media (max-width: $tablet-width - 1) {
         top: 8px;
         right: 8px;
       }
@@ -251,8 +265,13 @@
     border-radius: 5px;
 
     cursor: pointer;
+    transition: opacity $style-change-duration;
 
-    @media (max-width: $tablet-width) {
+    &:hover:not(.focus-visible) {
+      opacity: 0.8;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       width: 100%;
       height: calc(100vw / 2);
       margin-left: 0;
@@ -264,7 +283,7 @@
       padding-top: 34px;
       position: relative;
 
-      @media (max-width: $tablet-width) {
+      @media (max-width: $tablet-width - 1) {
         max-width: 50%;
       }
 
@@ -283,8 +302,36 @@
   }
 }
 
+.proposal .landscaping-form__section--map {
+
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 40px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
+    margin-bottom: 20px;
+  }
+}
+
+.proposal .landscaping-form__title {
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 10px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
+    margin-bottom: 17px;
+  }
+}
+
 .proposal .landscaping-form__section--map .landscaping-form__tip {
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width - 1) {
+    margin-top: 0;
+    margin-bottom: 32px;
+  }
+}
+
+.proposal .landscaping-form__section--map .landscaping-form__tip {
+  @media (max-width: $tablet-width - 1) {
     padding-right: 0;
     margin-bottom: 22px;
   }
@@ -300,7 +347,7 @@
   border-radius: $border-radius;
   margin-bottom: 39px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $tablet-width - 1) {
     margin-bottom: 26px;
   }
 
