баги на странице формы 4

--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -59,6 +59,12 @@
       padding-right: $tablet-padding;
     }
   }
+
+  .proposal .gallery__tape .swiper-slide {
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 }
 
 
