--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -37,6 +37,10 @@
     &--proposal {
       padding-bottom: 103px;
     }
+
+    &--approved {
+      padding-bottom: 103px;
+    }
   }
 
   .page-content .list-btn {
