--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -392,7 +392,11 @@
     grid-area: a;
     margin-bottom: 41px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 34px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       font-size: rem(24px);
       line-height: rem(28px);
       margin-bottom: 26px;
@@ -408,14 +412,18 @@
   .proposal__vote {
     @media (min-width: $desktop-width) {
       position: sticky;
-      top: 90px;
+      top: 115px;
 
       grid-area: c;
     }
   }
 
   .project-vote__container {
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 73px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       padding: 24px;
       margin-bottom: 48px;
     }
@@ -442,14 +450,25 @@
     grid-area: f;
     margin-bottom: 9px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 9px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 16px;
     }
   }
 
-  .project-page__gallery {
+  .proposal__gallery {
     grid-area: e;
-    @media (max-width: $desktop-width) {
+    margin-bottom: 48px;
+    max-width: 740px;
+
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 73px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 58px;
     }
   }
@@ -462,7 +481,14 @@
     grid-area: h;
     margin-bottom: 46px;
 
-    @media (max-width: $desktop-width) {
+    width: 100%;
+    height: 400px;
+
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 41px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 34px;
     }
   }
@@ -473,6 +499,7 @@
     padding: 17px 40px 15px;
 
     span {
+      font-size: rem(14px);
       padding: 0;
     }
   }
