--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -41,6 +41,11 @@
     &--approved {
       padding-bottom: 103px;
     }
+
+    &--implemented {
+      padding-top: 47px;
+      padding-bottom: 103px;
+    }
   }
 
   .page-content .list-btn {
