--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 600px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $tablet-width - 1) {
       width: 100%;
       height: 288px;
     }
@@ -347,6 +347,10 @@
   border-radius: $border-radius;
   margin-bottom: 39px;
 
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 23px;
+  }
+
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 26px;
   }
@@ -374,6 +378,7 @@
     grid-column-gap: 20px;
     grid-template-areas:
     "a   a"
+    "k   c"
     "b   c"
     "d   c"
     "e   c"
@@ -401,6 +406,15 @@
       line-height: rem(28px);
       margin-bottom: 26px;
     }
+
+    &--declined {
+      margin-bottom: 24px;
+    }
+  }
+
+  .proposal__link {
+    grid-area: k;
+    margin-bottom: 40px;
   }
 
   .proposal__text {
@@ -440,7 +454,7 @@
     grid-area: d;
     margin-bottom: 22px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
       font-size: rem(30px);
       line-height: rem(36px);
     }
@@ -465,6 +479,7 @@
     max-width: 740px;
 
     @media (max-width: $desktop-width - 1) {
+      max-width: unset;
       margin-bottom: 73px;
     }
 
@@ -533,7 +548,7 @@
     grid-area: a;
     margin-bottom: 41px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $tablet-width - 1) {
       font-size: rem(24px);
       line-height: rem(28px);
       margin-bottom: 32px;
@@ -547,24 +562,41 @@
   .proposal__vote {
     grid-area: c;
 
-    @media (max-width: $desktop-width) {
+    @media (min-width: $desktop-width) {
+      position: sticky;
+      top: 90px;
+    }
+
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 48px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 55px;
     }
   }
 
   .project-vote__container {
-    @media (max-width: $desktop-width) {
+    @media (max-width: $tablet-width - 1) {
       padding: 24px;
       margin-bottom: 48px;
     }
   }
 
-  .project-vote__like-counter span {
-    @media (max-width: $desktop-width) {
-      margin-right: 0;
+  .project-vote__like-counter {
+
+    span {
       font-weight: 400;
-      font-size: rem(15px);
-      line-height: 135%;
+
+      @media (max-width: $tablet-width - 1) {
+        margin-right: 0;
+        font-size: rem(15px);
+        line-height: 135%;
+      }
+    }
+
+    .project-vote__value {
+      font-weight: 500;
     }
   }
 
@@ -572,7 +604,7 @@
     grid-area: d;
     margin-bottom: 24px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 25px;
       font-size: rem(30px);
       line-height: rem(36px);
@@ -586,7 +618,7 @@
       grid-area: j;
       margin-bottom: 6px;
 
-      @media (max-width: $desktop-width) {
+      @media (max-width: $tablet-width - 1) {
         margin-bottom: 16px;
       }
     }
@@ -596,7 +628,7 @@
     grid-area: e;
     margin-bottom: 48px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 40px;
     }
   }
@@ -604,7 +636,11 @@
   .proposal__gallery {
     max-width: 740px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      max-width: unset;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       padding-bottom: 55px;
     }
 
@@ -613,7 +649,7 @@
       padding-bottom: 48px;
       border-bottom: 1px solid var(--color-stroke, $light-grey);
 
-      @media (max-width: $desktop-width) {
+      @media (max-width: $tablet-width - 1) {
         padding-bottom: 47px;
       }
     }
@@ -621,6 +657,14 @@
     &--grid {
       grid-area: i;
       padding-bottom: 48px;
+
+      @media (max-width: $desktop-width - 1) {
+        padding-bottom: 72px;
+      }
+
+      @media (max-width: $tablet-width - 1) {
+        padding-bottom: 55px;
+      }
     }
   }
 
@@ -631,7 +675,12 @@
     line-height: 180%;
     margin-bottom: 40px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      padding-top: 26px;
+      margin-bottom: 63px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
      margin-top: 0;
      margin-bottom: 55px;
      padding-top: 42px;
@@ -645,9 +694,16 @@
   iframe {
     grid-area: l;
     margin-bottom: 48px;
+    width: 100%;
+    height: 400px;
 
-    @media (max-width: $desktop-width) {
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 44px;
+    }
+
+    @media (max-width: $tablet-width - 1) {
       margin-bottom: 34px;
+      height: 288px;
     }
   }
 
