--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -421,6 +421,10 @@
     grid-area: b;
     margin-bottom: 41px;
     line-height: 180%;
+
+    @media (max-width: $tablet-width - 1) {
+      margin-bottom: 32px;
+    }
   }
 
   .proposal__vote {
@@ -505,13 +509,14 @@
 
     @media (max-width: $tablet-width - 1) {
       margin-bottom: 34px;
+      height: 288px;
     }
   }
 
   .button {
     justify-self: start;
     grid-area: i;
-    padding: 17px 40px 15px;
+    padding: 17px 46px 15px;
 
     span {
       font-size: rem(14px);
@@ -711,9 +716,10 @@
     grid-area: m;
     justify-self: start;
 
-    padding: 17px 40px 15px;
+    padding: 17px 46px 15px;
 
     span {
+      font-size: rem(14px);
       padding: 0;
     }
   }
