--- a/source/sass/blocks/proposal-winners.scss
+++ b/source/sass/blocks/proposal-winners.scss
@@ -12,10 +12,8 @@
 
 .proposal-winners__list {
     @include list-reset;
-    
-    p {
-        margin: 0;
-    }
+
+    padding-bottom: 35px;
 }
 
 .proposal-winners__item {
@@ -28,6 +26,18 @@
     background-position: left bottom;
     background-repeat: no-repeat;
     background-size: 100% 1px;
+
+    &--yours {
+        a {
+            font-size: rem(18px);
+            line-height: rem(23.4px);
+            font-weight: 500;
+        }
+    }
+
+    &:last-child {
+        background-image: none;
+    }
 }
 
 .proposal-winners__text-link {
@@ -37,6 +47,7 @@
 }
 
 .proposal-winners__status {
+    margin: 0;
     width: fit-content;
     font-size: rem(15px);
     line-height: rem(20.25px);
@@ -47,9 +58,194 @@
 }
 
 .proposal-winners_yours {
+    margin: 0;
+    margin-bottom: 5px;
     width: 100%;
+    font-size: rem(14px);
+    line-height: rem(18.2px);
+    color: #2C8ECC;
+
+    svg {
+        margin-right: 5px;
+    }
 }
 
 .proposal-winners__address {
     display: none;
+}
+
+.proposal-winners__paginator {
+    margin: 0;
+    margin-left: 10px;
+    margin-bottom: 56px;
+}
+
+.proposal-winners__show-map-btn {
+    display: none;
+}
+
+.proposal-winners__map-container {
+    max-width: $desktop-width;
+    padding: 0 40px;
+    margin: 0 auto;
+    
+    @include tablet {
+        padding: 0;
+    }
+    
+    @include mobile {
+        padding: 0;
+    }
+}
+
+.proposal-winners__map {
+    margin-bottom: 73px;
+
+    button {
+        display: none;
+    }
+
+    iframe {
+        width: 100%;
+        max-width: 1120px;
+        border: none;
+        border-radius: 5px;
+    }
+}
+
+@include tablet {
+    .proposal-winners__item {
+        flex-direction: column;
+
+        &:nth-child(n+4) {
+            display: none;
+        }
+    }
+
+    .proposal-winners__list {
+        padding-bottom: 40px;
+    }
+
+    .proposal-winners__status {
+        margin-top: 25px;
+        padding: 0;
+    }
+
+    .proposal-winners__paginator {
+        margin-left: 0;
+        margin-bottom: 81px;
+    }
+
+    .proposal-winners__map {
+        margin-bottom: 65px;
+
+        iframe {
+            height: 460px;
+        }
+    }
+}
+
+@include mobile {
+    .proposal-winners__title {
+        margin-bottom: 0px;
+        padding-top: 35px;
+        font-size: rem(24px);
+        line-height: rem(28.44px);
+    }
+
+    .proposal-winners__text-link {
+        width: 100%;
+    }
+
+    .proposal-winners__address {
+        margin: 0;
+        margin-bottom: 25px;
+        font-size: rem(14px);
+        line-height: rem(18.2px);
+        color: #A6ABB2;
+        display: block;
+
+        svg {
+            margin-right: 5px;
+        }
+    }
+
+    .proposal-winners_yours {
+        margin-bottom: 10px;
+    }
+
+    .proposal-winners__list {
+        padding-bottom: 50px;
+    }
+
+    .proposal-winners__map {
+        display: none;
+    }
+
+    .proposal-winners__show-map-btn {
+        @include btn-reset;
+        margin: 0 auto;
+        margin-bottom: 42px;
+        display: block;
+        padding: 15px 15px;
+        font-size: rem(15px);
+        line-height: rem(20.25px);
+        font-weight: 500;
+        color: #2C8ECC;
+        text-transform: uppercase;
+
+        &:hover,
+        &:focus {
+            color: $blue-accent;
+        }
+    }
+
+    .proposal-winners__paginator {
+        margin-bottom: 35px;
+    }
+
+    .proposal-winners__map {
+        display: none;
+        position: fixed;
+        top: 20%;
+        width: 100%;
+        height: 568px;
+        padding: 0;
+        background-color: #ffffff;
+
+        button {
+            @include btn-reset;
+            position: relative;
+            margin-left: auto;
+            margin-top: 16px;
+            margin-bottom: 20px;
+            margin-right: 16px;
+            display: block;
+            width: 26px;
+            height: 26px;
+            
+            &::before,
+            &::after {
+                position: absolute;
+                left: 10px;
+                top: 0;
+                content: "";
+                height: 26px;
+                width: 2px;
+                background-color: #A6ABB3;
+            }
+
+            &::before {
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                transform: rotate(-45deg);
+            }
+        }
+
+        iframe {
+            height: 512px;
+        }
+    }
 }
