--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -49,6 +49,9 @@
 @import 'blocks/proposal';
 @import 'blocks/comments-tab';
 @import 'blocks/address-pin';
+@import 'blocks/area-improvement';
+@import 'blocks/improvement-stage';
+@import 'blocks/user-proposal';
 
 // main page
 @import "blocks/news-notice";
