--- a/source/sass/blocks/proposal-winners.scss
+++ b/source/sass/blocks/proposal-winners.scss
@@ -99,6 +99,7 @@
 }
 
 .proposal-winners__map {
+    position: relative;  // УБРАТЬ
     margin-bottom: 73px;
 
     button {
@@ -207,9 +208,11 @@
     .proposal-winners__map {
         display: none;
         position: fixed;
-        top: 20%;
+        z-index: 222;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: 568px;
+        height: 100vh;
         padding: 0;
         background-color: #ffffff;
 
@@ -245,7 +248,15 @@
         }
 
         iframe {
-            height: 512px;
+            height: 100%;
         }
+
+        &--show {
+            display: block;
+        }
+    }
+
+    .proposal-winners__map-container {
+        height: 100%;
     }
 }
